# database-agent

./: .env.example  .gitignore  Dockerfile.postgres  Makefile  README.md  docker-compose.yml  multi_agent.py  tool_agent.py
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/agent/: __init__.py  agent_runtime.py  framework.py  orchestrator.py  prompts.py  prompts_backup.py  signatures.py
backend/src/agent/tools/: __init__.py  context.py  schema_tools.py  search_tools.py  sql_tools.py
backend/src/api/: deps.py
backend/src/api/v1/: CHAT_API.md  __init__.py  chat.py  collections.py  connectors.py  databases.py  schema.py
backend/src/db/: __init__.py  database.py
backend/src/models/: __init__.py  collection.py  connector.py  conversation.py  database.py  user.py
backend/src/processing/: __init__.py  document_processor.py  visual_processor.py
backend/src/processing/chunking/: __init__.py  base.py  semantic.py
backend/src/processing/extractors/: __init__.py  base.py  csv_extractor.py  docx.py  excel.py  (+3 more)
backend/src/schemas/: __init__.py  chat.py  collection.py  database.py
backend/src/scripts/: create_sample_db.py
backend/src/services/: __init__.py  colqwen2_client.py  connector_service.py  database_connector.py  definition_generator.py  embedding_service.py  minio_service.py  rrf.py  schema_inspector.py  search_service.py  sqlite_service.py  vector_db.py
backend/src/utils/: encryption.py
backend/src/worker/: __init__.py
backend/src/workers/: schema_indexer.py
backend/tests/: test_rrf.py
(+30 files in other folders)
